--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "tokyo-next-appdir",
+  "version": "2.5.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    "mini-css-extract-plugin": "^2.9.0",
-    "next": "14.2.3",
+    "@emailjs/browser": "^4.1.0",
+    "aos": "^2.3.4",
+    "next": "14.1.0",
+    "next-share": "^0.27.0",
+    "next-themes": "^0.2.1",
+    "photoswipe": "^5.4.3",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.4"
+    "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
+    "react-modal-video": "^2.0.1",
+    "react-photoswipe-gallery": "^3.0.1",
+    "react-slick": "^0.30.2",
+    "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.4",
+    "react-tooltip": "^5.26.3",
+    "react-typed": "^2.0.12",
+    "sass": "^1.71.1",
+    "slick-carousel": "^1.8.1"
   }
 }
