--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "mysql2": "^3.10.0",
     "sequelize": "^6.37.3"
